--- a/SCM_Water_Back/src/main/resources/templates/create.html
+++ b/SCM_Water_Back/src/main/resources/templates/create.html
@@ -49,7 +49,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">商品图片</label>
                             <div class="layui-input-inline">
-                           <img th:src="'image/'+${repertoryDetails.img}" width="140px" height="140px">
+                           <img th:src="'../'+${repertoryDetails.img}" width="140px" height="140px">
                             </div>
                         </div>
                         <div class="layui-form-item">
