--- a/SCM_Water_Back/src/main/resources/templates/delivery_zf.html
+++ b/SCM_Water_Back/src/main/resources/templates/delivery_zf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" >
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -77,7 +77,7 @@
     <!-- 内容主体区域 -->
     <div style="padding: 15px;">
         <fieldset class="layui-elem-field">
-            <legend>用户管理 - 用户列表</legend>
+            <legend>订单管理 - 派送处理</legend>
             <div class="layui-field-box">
               <form class="layui-form" action="">
                 <div class="layui-form-item" style="text-align:center;">
@@ -95,9 +95,6 @@
               </form>
               <hr>
               <div class="layui-btn-group">
-                  <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" dw-url="create_zf.html" dw-title="新增用户" dw-width="100%" dw-height="100%">
-                      <i class="layui-icon">&#xe654;</i>新增
-                  </button>
                   <button class="layui-btn layui-btn-xs dw-refresh">
                       <i class="layui-icon">&#x1002;</i>刷新
                   </button>
@@ -114,32 +111,32 @@
                   <thead>
                       <tr>
                    <!--    <th class="selectAll"><input type="checkbox"></th> -->
-                      <th>员工姓名</th>
-                      <th>员工电话</th>
-                      <th>员工性别</th>
-                      <th>员工地址</th>
-                      <th>密码</th>
+                      <th>订单编号</th>
+                      <th>用户名</th>
+                      <th>地址</th>
+                      <th>联系电话</th>
+                      <th>下单时间</th>
+                      <th>订单总金额</th>
+                      <th>订单状态</th>
                       <th style="text-align:center;">操作</th>
                       </tr> 
                   </thead>
-             <tr th:each="entries,stat:${list}">
-                <td th:text="${entries.staffname}"></td>
-                <td th:text="${entries.staffphone}"></td>
-                <td th:text="${entries.staffsex}"></td>
-                <td th:text="${entries.staffsite}"></td>
-                <td th:text="${entries.password}"></td>
+                   <tr th:each="entries,stat:${list}">
+                 <td th:text="${entries.numberr}"></td>
+                 <td th:text="${entries.name}"></td>
+                 <td th:text="${entries.address}"></td>
+                 <td th:text="${entries.phone}"></td>
+                 <td th:text="${#dates.format(entries.ordertime,'yyyy-MM-dd')}"></td>
+                 <td th:text="${entries.money}"></td>
+                 <td th:text="${entries.status}"></td> 
                  <td class="text-center">
-                          <div class="layui-btn-group">
-                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="'createUpdate_zf.html?staffid='+${entries.staffid}"  dw-title="编辑用户">
-                                <i class="layui-icon">&#xe642;</i>编辑
-                              </button>
-                              <!-- onclick="createdelete(${entries.staffid})" -->
-                              <button class="layui-btn layui-btn-xs layui-btn-danger dw-delete" dw-url=""  th:onclick="'createdelete('+${entries.staffid}+')'" dw-title="小明">
-                                <i class="layui-icon">&#xe640;</i>删除
+                           <div class="layui-btn-group">
+                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="'DeliveryOrder?id='+${entries.id}"  dw-title="编辑用户">
+                                <i class="layui-icon">&#xe642;</i>选择派送人员
                               </button>
                             </div>
-                      </td>
-                  </tr> 
+                      </td> 
+                  </tr>  
                   </th:block>
                   <tbody>
                   </tbody>
@@ -158,23 +155,6 @@
 <script type="text/javascript" src="./icheck/icheck.js"></script>
 <script type="text/javascript" src="./javascript/dw.js"></script>
 <script>
- function createdelete(staffid){
-    var a=staffid;
-    $.ajax({
-        url:"createdelete.html",
-        type:"post",
-        data:{a:a},
-        processData:false,
-        contentType:false,
-        success:function(data){
-       	 if(data>0){
-       		 location.href = "show.html";
-       	 }
-        },
-        error:function(e){
-        }
-    });        
-}  
 </script>
 </body>
 </html>
