--- a/SCM_Water_Back/src/main/resources/templates/index.html
+++ b/SCM_Water_Back/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
             <a href="javascript:;">订单管理</a>
             <dl class="layui-nav-child">
                 <dd><a href="order">客户订单</a></dd>
-                <dd><a href="role.html">派工处理</a></dd>
+                <dd><a href="delivery">派工处理</a></dd>
                 <dd><a href="orderAlready">待办任务</a></dd>
             </dl>
         </li>
